--- a/README.ipynb
+++ b/README.ipynb
@@ -7,7 +7,37 @@
     "\n",
     "![tests](https://github.com/Kankelborg-Group/named_arrays/actions/workflows/tests.yml/badge.svg)\n",
     "[![codecov](https://codecov.io/gh/Kankelborg-Group/named_arrays/branch/main/graph/badge.svg?token=x8K7SLx4UB)](https://codecov.io/gh/Kankelborg-Group/named_arrays)\n",
-    "[![Documentation Status](https://readthedocs.org/projects/named-arrays/badge/?version=latest)](https://named-arrays.readthedocs.io/en/latest/?badge=latest)\n"
+    "[![Documentation Status](https://readthedocs.org/projects/named-arrays/badge/?version=latest)](https://named-arrays.readthedocs.io/en/latest/?badge=latest)\n",
+    "\n",
+    "`named_arrays` is an implementation of a [named tensor](https://nlp.seas.harvard.edu/NamedTensor), which assigns names to each axis of an n-dimensional array such as a numpy array.\n",
+    "\n",
+    "When using a numpy array, we often have to insert singleton dimensions to align axes before using binary operators etc.\n",
+    "This is not necessary when using a named tensor implementation such as `xarray` or `named_arrays`, axes are aligned automatically using their names."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Installation\n",
+    "`named_arrays` is available on PyPi and can be installed using pip\n",
+    "```bash\n",
+    "pip install named_arrays\n",
+    "```"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Examples\n",
+    "\n",
+    "### ScalarArray\n",
+    "The fundamental type of `named_arrays` is the [`ScalarArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.ScalarArray.html), which is a composition of a numpy ndarray-like object and a tuple of axis names which must have the same length as the number of dimensions in the array."
    ],
    "metadata": {
     "collapsed": false
@@ -15,9 +45,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import numpy as np\n",
+    "import named_arrays as na\n",
+    "\n",
+    "a = na.ScalarArray(np.array([1, 2, 3]), axes=('x',))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "If we create another array with a different axis name, it will be broadcasted automatically against the first array if we add them together"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ScalarArray(\n    ndarray=[[5, 6],\n             [6, 7],\n             [7, 8]],\n    axes=('x', 'y'),\n)"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = na.ScalarArray(np.array([4, 5]), axes=('y',))\n",
+    "c = a + b\n",
+    "c"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "All the usual numpy reduction operations use the axis name instead of the axis index"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ScalarArray(\n    ndarray=[6., 7.],\n    axes=('y',),\n)"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.mean('x')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To index the array we can use a dictionary with the axis names as the keys"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ScalarArray(\n    ndarray=[5, 6],\n    axes=('y',),\n)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[dict(x=0)]"
+   ],
    "metadata": {
     "collapsed": false
    }
