Updated readme with the correct installation instructions.

--- a/README.ipynb
+++ b/README.ipynb
@@ -25,7 +25,7 @@
     "## Installation\n",
     "`named_arrays` is available on PyPi and can be installed using pip\n",
     "```bash\n",
-    "pip install named_arrays\n",
+    "pip install named-arrays\n",
     "```"
    ],
    "metadata": {
