Moved project location to the `sun-data` organization.

--- a/README.ipynb
+++ b/README.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# named_arrays\n",
+    "# named-arrays\n",
     "\n",
-    "![tests](https://github.com/Kankelborg-Group/named_arrays/actions/workflows/tests.yml/badge.svg)\n",
+    "![tests](https://github.com/sun-data/named-arrays/actions/workflows/tests.yml/badge.svg)\n",
     "[![codecov](https://codecov.io/gh/Kankelborg-Group/named_arrays/branch/main/graph/badge.svg?token=x8K7SLx4UB)](https://codecov.io/gh/Kankelborg-Group/named_arrays)\n",
     "[![Documentation Status](https://readthedocs.org/projects/named-arrays/badge/?version=latest)](https://named-arrays.readthedocs.io/en/latest/?badge=latest)\n",
     "[![PyPI version](https://badge.fury.io/py/named-arrays.svg)](https://badge.fury.io/py/named-arrays)\n",
     "\n",
-    "`named_arrays` is an implementation of a [named tensor](https://nlp.seas.harvard.edu/NamedTensor), which assigns names to each axis of an n-dimensional array such as a numpy array.\n",
+    "`named-arrays` is an implementation of a [named tensor](https://nlp.seas.harvard.edu/NamedTensor), which assigns names to each axis of an n-dimensional array such as a numpy array.\n",
     "\n",
     "When using a numpy array, we often have to insert singleton dimensions to align axes before using binary operators etc.\n",
-    "This is not necessary when using a named tensor implementation such as `xarray` or `named_arrays`, axes are aligned automatically using their names."
+    "This is not necessary when using a named tensor implementation such as `xarray` or `named-arrays`, axes are aligned automatically using their names."
    ],
    "metadata": {
     "collapsed": false
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "source": [
     "## Installation\n",
-    "`named_arrays` is available on PyPi and can be installed using pip\n",
+    "`named-arrays` is available on PyPi and can be installed using pip\n",
     "```bash\n",
     "pip install named-arrays\n",
     "```"
@@ -38,7 +38,7 @@
     "## Examples\n",
     "\n",
     "### ScalarArray\n",
-    "The fundamental type of `named_arrays` is the [`ScalarArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.ScalarArray.html), which is a composition of a numpy ndarray-like object and a tuple of axis names which must have the same length as the number of dimensions in the array."
+    "The fundamental type of `named-arrays` is the [`ScalarArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.ScalarArray.html), which is a composition of a numpy ndarray-like object and a tuple of axis names which must have the same length as the number of dimensions in the array."
    ],
    "metadata": {
     "collapsed": false
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -69,17 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ScalarArray(\n    ndarray=[[5, 6],\n             [6, 7],\n             [7, 8]],\n    axes=('x', 'y'),\n)"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "b = na.ScalarArray(np.array([4, 5]), axes=('y',))\n",
     "c = a + b\n",
@@ -100,17 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ScalarArray(\n    ndarray=[6., 7.],\n    axes=('y',),\n)"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "c.mean('x')"
    ],
@@ -129,17 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ScalarArray(\n    ndarray=[5, 6],\n    axes=('y',),\n)"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "c[dict(x=0)]"
    ],
@@ -159,17 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ScalarLinearSpace(\n    start=0,\n    stop=1,\n    axis='z',\n    num=4,\n    endpoint=True,\n)"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "d = na.ScalarLinearSpace(0, 1, axis='z', num=4)\n",
     "d"
@@ -189,17 +153,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ScalarArray(\n    ndarray=[[1.        , 1.33333333, 1.66666667, 2.        ],\n             [2.        , 2.33333333, 2.66666667, 3.        ],\n             [3.        , 3.33333333, 3.66666667, 4.        ]],\n    axes=('x', 'z'),\n)"
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "a + d"
    ],
