Fixing test status badge in readme

--- a/README.ipynb
+++ b/README.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "# named-arrays\n",
     "\n",
-    "![tests](https://github.com/sun-data/named-arrays/actions/workflows/tests.yml/badge.svg)\n",
+    "[![tests](https://github.com/sun-data/named-arrays/actions/workflows/tests.yml/badge.svg)](https://github.com/sun-data/named-arrays/actions/workflows/tests.yml)\n",
     "[![codecov](https://codecov.io/gh/sun-data/named-arrays/graph/badge.svg?token=1GhdcsgwO0)](https://codecov.io/gh/sun-data/named-arrays)\n",
     "[![Documentation Status](https://readthedocs.org/projects/named-arrays/badge/?version=latest)](https://named-arrays.readthedocs.io/en/latest/?badge=latest)\n",
     "[![PyPI version](https://badge.fury.io/py/named-arrays.svg)](https://badge.fury.io/py/named-arrays)\n",
