Added a "Features" subsection to the readme.

--- a/README.ipynb
+++ b/README.ipynb
@@ -12,8 +12,19 @@
     "\n",
     "`named-arrays` is an implementation of a [named tensor](https://nlp.seas.harvard.edu/NamedTensor), which assigns names to each axis of an n-dimensional array such as a numpy array.\n",
     "\n",
-    "When using a numpy array, we often have to insert singleton dimensions to align axes before using binary operators etc.\n",
-    "This is not necessary when using a named tensor implementation such as `xarray` or `named-arrays`, axes are aligned automatically using their names."
+    "When using a Numpy n-dimensional array, the programmer must manually keep track of the physical meaning of each axis in the array.\n",
+    "Furthermore, it is often necessary to insert singleton dimensions at the end of the array to allow it to broadcastable against other arrays.\n",
+    "Named tensors solve this problem by giving each axis a name, which allows for automatic axis alignment without the need for inserting extra dimensions.\n",
+    "`named-arrays` provides a very unapologetic implementation of a named tensor, since axes can _only_ be accessed using their names,\n",
+    "unlike [`xarray`](https://github.com/pydata/xarray) which allows for both name and index.\n",
+    "\n",
+    "## Features\n",
+    "\n",
+    " - [`ScalarArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.ScalarArray.html), a named tensor implementation with Astropy Quantity support. Analogue of [`xarray.Variable`](https://docs.xarray.dev/en/latest/generated/xarray.Variable.html)\n",
+    " - [`UncertainScalarArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.UncertainScalarArray.html), a named tensor implementation with automatic uncertainty propagation.\n",
+    " - [`Cartesian2dVectorArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.Cartesian2dVectorArray.html), representation of a 2D vector.\n",
+    " - [`Cartesian3dVectorArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.Cartesian3dVectorArray.html), representation of a 3D vector.\n",
+    " - [`FunctionArray`](https://named-arrays.readthedocs.io/en/latest/_autosummary/named_arrays.FunctionArray.html), representation of a discrete function. Analogue of an [`xarray.DataArray`](https://docs.xarray.dev/en/latest/generated/xarray.DataArray.html#xarray.DataArray)\n"
    ],
    "metadata": {
     "collapsed": false
