--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -11,5 +11,11 @@
     URL = {https://doi.org/10.1080/0025570X.1990.11977515},
     eprint = {https://doi.org/10.1080/0025570X.1990.11977515}
 }
-
-
+@article{Goh2017,
+  author = {Goh, Gabriel},
+  title = {Why Momentum Really Works},
+  journal = {Distill},
+  year = {2017},
+  url = {http://distill.pub/2017/momentum},
+  doi = {10.23915/distill.00006}
+}
