Added `named_arrays.despike()` function, a wrapper around `astroscrappy.detect_cosmics()`.

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -19,3 +19,20 @@
   url = {http://distill.pub/2017/momentum},
   doi = {10.23915/distill.00006}
 }
+@ARTICLE{vanDokkum2001,
+       author = {{van Dokkum}, Pieter G.},
+        title = "{Cosmic-Ray Rejection by Laplacian Edge Detection}",
+      journal = {\pasp},
+     keywords = {Instrumentation: Detectors, Methods: Data Analysis-techniques: image processing, Astrophysics},
+         year = 2001,
+        month = nov,
+       volume = {113},
+       number = {789},
+        pages = {1420-1427},
+          doi = {10.1086/323894},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0108003},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001PASP..113.1420V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
