Updates for testing.  design matrix now properly handles a scalr input.

--- a/docs/tutorials/PolynomialFunctionArray.ipynb
+++ b/docs/tutorials/PolynomialFunctionArray.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "raw",
+   "id": "33c91c6520a84dfb",
+   "metadata": {},
    "source": [
     "Polynomial Fit Function Array Tutorial\n",
     "==============================\n",
@@ -10,23 +11,23 @@
     "A demonstration of defining creating a function array, fitting a polynomial to it, and then comparing\n",
     "the fit if a different degree polynomial is used.\n",
     "\n"
-   ],
-   "id": "33c91c6520a84dfb"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "id": "887eedc318fabcad",
+   "metadata": {},
    "source": [
     "import named_arrays as na\n",
     "import astropy.units as u"
    ],
-   "id": "887eedc318fabcad"
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "id": "1393884e560bc1b9",
+   "metadata": {},
    "source": [
     "inputs = na.SpectralPositionalVectorLinearSpace(\n",
     "    start=na.SpectralPositionalVectorArray(\n",
@@ -61,13 +62,13 @@
     "\n",
     "inputs"
    ],
-   "id": "1393884e560bc1b9",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "id": "3734706d26357898",
+   "metadata": {},
    "source": [
     "t = na.ScalarLinearSpace(-10 * u.s, 10 * u.s, num=3, axis='time')\n",
     "outputs = na.Cartesian2dVectorArray(\n",
@@ -80,63 +81,77 @@
     "\n",
     "outputs"
    ],
-   "id": "3734706d26357898",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "id": "6a2b44484163c4ad",
+   "metadata": {},
    "source": [
     "fit = na.PolynomialFitFunctionArray(\n",
     "    inputs=inputs,\n",
     "    outputs=outputs,\n",
     "    degree=2,\n",
-    "    components_polynomial=('position_x', 'position_y'),\n",
+    "    components_polynomial=('position.x', 'position.y'),\n",
     "    axis_polynomial=('x', 'y'),\n",
     ")"
    ],
-   "id": "6a2b44484163c4ad",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "fit.coefficients ",
    "id": "e983491bdfef5275",
+   "metadata": {},
+   "source": [
+    "fit.coefficients "
+   ],
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "id": "5d8fe6270948c56b",
+   "metadata": {},
    "source": [
     "fit_linear = na.PolynomialFitFunctionArray(\n",
     "    inputs=inputs,\n",
     "    outputs=outputs,\n",
     "    degree=1,\n",
-    "    components_polynomial=('position_x', 'position_y'),\n",
+    "    components_polynomial=('position.x', 'position.y'),\n",
     "    axis_polynomial=('x', 'y'),\n",
     ")\n",
     "best_fit = fit_linear(fit.inputs)"
    ],
-   "id": "5d8fe6270948c56b",
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "best_fit",
    "id": "fb0d6e9634e14437",
+   "metadata": {},
+   "source": "best_fit",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
+   "cell_type": "raw",
+   "source": "Plot below shows the best linear fit to the original function array, the difference between the fit and the original outputs showing the quality of the fit.",
+   "id": "b2796f50bbf1d7a4"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(\n",
+    "    ncols = 3\n",
+    ")\n",
+    "\n"
+   ],
    "id": "4c2f891801be4bd5",
    "outputs": [],
    "execution_count": null
@@ -144,21 +159,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
