Updated plotting attempt.

--- a/docs/tutorials/PolynomialFunctionArray.ipynb
+++ b/docs/tutorials/PolynomialFunctionArray.ipynb
@@ -45,7 +45,7 @@
     "        )\n",
     "    ),\n",
     "    num=na.SpectralPositionalVectorArray(\n",
-    "        wavelength=5,\n",
+    "        wavelength=2,\n",
     "        position=na.Cartesian2dVectorArray(\n",
     "            x=51,\n",
     "            y=51,\n",
@@ -145,14 +145,65 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "test = inputs.type_explicit.from_cartesian_nd(inputs.cartesian_nd,like=inputs)\n",
+    "test"
+   ],
+   "id": "a0e8ec9e0c43d4b8",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "fit.broadcasted.outputs.x\n",
+    "fit.broadcasted.inputs.position"
+   ],
+   "id": "66486590ac733b00",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "fig, ax = plt.subplots(\n",
-    "    ncols = 3\n",
+    "fig, ax = na.plt.subplots(\n",
+    "    axis_cols='wavelength',\n",
+    "    ncols=fit.shape['wavelength'],\n",
+    "    axis_rows='time',\n",
+    "    nrows=fit.shape['time'],\n",
+    ")\n",
+    "\n",
+    "# na.plt.pcolormesh(\n",
+    "#     fit.broadcasted.inputs.position,\n",
+    "#     C=fit.broadcasted.outputs.x,\n",
+    "#     ax=ax,\n",
+    "#     components=('x','y'),\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "na.plt.imshow(\n",
+    "    fit.broadcasted.outputs.x,\n",
+    "    ax=ax,\n",
+    "    axis_x = 'x',\n",
+    "    axis_y = 'y',\n",
     ")\n",
     "\n"
    ],
    "id": "4c2f891801be4bd5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "\n"
+   ],
+   "id": "61977a103af1962f",
    "outputs": [],
    "execution_count": null
   }
