slight mods to tutorial

--- a/docs/tutorials/PolynomialFunctionArray.ipynb
+++ b/docs/tutorials/PolynomialFunctionArray.ipynb
@@ -36,7 +36,7 @@
     "import astropy.units as u\n",
     "import astropy.visualization\n",
     "\n",
-    "astropy.visualization.quantity_support()\n"
+    "astropy.visualization.quantity_support();"
    ],
    "outputs": [],
    "execution_count": null
@@ -135,8 +135,7 @@
     "outputs = na.Cartesian2dVectorArray(\n",
     "    x=1 * u.mm + a * inputs.position.x + b * inputs.position.y ** 2 ,\n",
     "    y=5 * u.mm + c * inputs.position.y + d * inputs.position.x ** 2,\n",
-    ")\n",
-    "\n"
+    ")"
    ],
    "outputs": [],
    "execution_count": null
@@ -152,9 +151,7 @@
     },
     "tags": []
    },
-   "source": [
-    "Defining a PolynomialFitFunctionArray of degree 2 with components position.x and position.y and axis_polynomial 'x' and 'y' will fit a second degree polynomial to the inputs and outputs.  fit.coefficients gives the coefficients of the ordinary (linear?) least squares fit to the inputs and outputs. The fit coefficients match those used to creat the outputs to machine preceision. "
-   ]
+   "source": "Defining a PolynomialFitFunctionArray of degree 2 with components position.x and position.y and axis_polynomial 'x' and 'y' will fit a second degree polynomial to the inputs and outputs.  fit.coefficients gives the coefficients of the ordinary (linear?) least squares fit to the inputs and outputs. The fit coefficients match those used to create the outputs to machine preceision."
   },
   {
    "cell_type": "code",
@@ -269,7 +266,6 @@
     "quadratic_fit_output_y = best_fit_quad.outputs.y.value\n",
     "linear_fit_output_y = best_fit_linear.outputs.y.value\n",
     "\n",
-    "\n",
     "fig, ax = na.plt.subplots(\n",
     "    axis_cols='wavelength',\n",
     "    ncols=fit.shape['wavelength'],\n",
@@ -278,13 +274,12 @@
     "    sharex=True,\n",
     "    sharey=True\n",
     ")\n",
-    "\n",
     "na.plt.pcolormesh(\n",
     "    fit.broadcasted.inputs.position,\n",
     "    C=original_output_y,\n",
     "    ax=ax,\n",
     ")\n",
-    "fig.suptitle('Orginal Function Array')"
+    "fig.suptitle('Orginal Function Array');"
    ],
    "outputs": [],
    "execution_count": null
@@ -302,13 +297,12 @@
     "      sharex=True,\n",
     "    sharey=True\n",
     ")\n",
-    "\n",
     "na.plt.pcolormesh(\n",
     "    fit.broadcasted.inputs.position,\n",
     "    C=quadratic_fit_output_y,\n",
     "    ax=ax,\n",
     ")\n",
-    "fig.suptitle('Quadratic Fit')"
+    "fig.suptitle('Quadratic Fit');"
    ],
    "outputs": [],
    "execution_count": null
@@ -326,14 +320,12 @@
     "    sharex=True,\n",
     "    sharey=True\n",
     ")\n",
-    "\n",
     "na.plt.pcolormesh(\n",
     "    fit.broadcasted.inputs.position,\n",
     "    C=linear_fit_output_y ,\n",
     "    ax=ax,\n",
     ")\n",
-    "\n",
-    "fig.suptitle('Linear Fit')\n"
+    "fig.suptitle('Linear Fit');"
    ],
    "outputs": [],
    "execution_count": null
