--- a/docs/tutorials/PolynomialFunctionArray.ipynb
+++ b/docs/tutorials/PolynomialFunctionArray.ipynb
@@ -53,7 +53,7 @@
     "tags": []
    },
    "source": [
-    ":class:`named_arrays.PolynomialFitFunctionArrays` are defined similarly to :class:`named_arrays.FunctionArrays` by a set of `inputs` (indepent variables) and `outputs` (dependent variables), but with additional parameters `degree`, `axis_polynomial`, and `components_polynomial` used to fit a polynomial function to the function.\n",
+    ":class:`named_arrays.PolynomialFitFunctionArray`s are defined similarly to :class:`named_arrays.FunctionArray`s by a set of `inputs` (indepent variables) and `outputs` (dependent variables), but with additional parameters `degree`, `axis_polynomial`, and `components_polynomial` used to fit a polynomial function to the function.\n",
     "\n",
     "Start by defining a three-dimensional input grid dependent on wavelength, position.x, and position.y."
    ]
@@ -149,7 +149,7 @@
     },
     "tags": []
    },
-   "source": "Defining a :class:`named_arrays.PolynomialFitFunctionArray` of degree 2 with components :code:`position.x` and :code:`position.y` and `axis_polynomial` :code:`\"x\"` and :code:`\"y\"` will fit a second degree polynomial to the inputs and outputs. :code:`fit.coefficients` gives the coefficients of the ordinary (linear?) least squares fit to the inputs and outputs. The fit coefficients match those used to create the outputs to machine preceision."
+   "source": "Defining a :class:`named_arrays.PolynomialFitFunctionArray` of degree 2 with components :code:`position.x` and :code:`position.y` and `axis_polynomial` :code:`x` and :code:`y` will fit a second degree polynomial to the inputs and outputs. :code:`fit.coefficients` gives the coefficients of the ordinary (linear?) least squares fit to the inputs and outputs. The fit coefficients match those used to create the outputs to machine preceision."
   },
   {
    "cell_type": "code",
@@ -184,7 +184,7 @@
     },
     "tags": []
    },
-   "source": "Calling a polynomal function array with a set of inputs uses the fit polynomial to calculate a new set of outputs and returns a :class:`FunctionArray` with those specfied inputs and calculated outputs.  The rms error between the fit and original outputs is low."
+   "source": "Calling a polynomal function array with a set of inputs uses the fit polynomial to calculate a new set of outputs and returns a :class:`named_arrays.FunctionArray` with those specfied inputs and calculated outputs.  The rms error between the fit and original outputs is low."
   },
   {
    "cell_type": "code",
