Added a simple indexing tutorial to the documentation.

--- a/docs/tutorials/indexing.ipynb
+++ b/docs/tutorials/indexing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "3b797b2e",
+   "id": "33ce3e3e",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -10,7 +10,7 @@
     "Simple Indexing\n",
     "===============\n",
     "\n",
-    ":mod:`named_arrays` generalizes the :mod:`numpy` indexing model using :class:`dict`s insted of :class:`tuple`s.\n",
+    ":mod:`named_arrays` generalizes the :mod:`numpy` indexing model using :class:`dict`\\ s insted of :class:`tuple`\\ s.\n",
     "This means that indexing the array depends on the name of the axis instead of it's position."
    ]
   },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "4f0e95e0",
+   "id": "eb91d331",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c3f0b6",
+   "id": "4b2439ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e6df9d70",
+   "id": "b3f15708",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "414100f7",
+   "id": "025ad3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "1c4ebdbb",
+   "id": "2b30f23b",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2f8ced",
+   "id": "fe039ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a8472656",
+   "id": "6e6758b7",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3220c375",
+   "id": "98dacfc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "d9713e05",
+   "id": "9234b801",
    "metadata": {
     "raw_mimetype": "text/restructuredtext"
    },
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "599d277a",
+   "id": "ecab6dda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "44c04739",
+   "id": "5ad2df67",
    "metadata": {},
    "source": [
     "This document only describes simple indexing, but advanced indexing is also fully supported and will be discussed in later tutorials."
